[tool.poetry]
name = "morpher-pdf"
version = "0.1.0"
description = "A Python package to convert PDF documents into different formats"
authors = ["Aleksei Chernyshov <alexchernishof@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "morpher_pdf"}]


[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
pdf2image = "^1.17.0"
pymupdf = "^1.25.2"
numpy = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
